--- a/src/main/resources/database/myDb.properties
+++ b/src/main/resources/database/myDb.properties
@@ -1,5 +1,5 @@
-#HSQL Database Engine 2.7.1
-#Tue Apr 02 15:54:47 BRT 2024
-tx_timestamp=54
-modified=yes
-version=2.7.1
+#HSQL Database Engine 2.7.0
+#Wed Apr 03 00:38:50 UTC 2024
+modified=no
+tx_timestamp=352
+version=2.7.0
