--- a/src/main/resources/database/myDb.properties
+++ b/src/main/resources/database/myDb.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.7.1
-#Tue Apr 02 21:55:31 BRT 2024
-modified=yes
-tx_timestamp=352
+#Tue Apr 02 22:14:54 BRT 2024
+modified=no
+tx_timestamp=3164
 version=2.7.1
