Criação dos endpoints de check-in e crachá

--- a/src/main/resources/database/myDb.properties
+++ b/src/main/resources/database/myDb.properties
@@ -1,5 +1,5 @@
-#HSQL Database Engine 2.7.1
-#Sat Apr 06 11:42:19 BRT 2024
+#HSQL Database Engine 2.7.0
+#Sat Apr 06 15:16:11 UTC 2024
 modified=no
-tx_timestamp=4865
-version=2.7.1
+tx_timestamp=5221
+version=2.7.0
